add map and email to contact

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,7 +80,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdcdcd', end
  	}
 
  	.nav-row {
- 		margin-top:5px;height:42px;background-color:$wieser_green;text-align:center;
+ 		margin-top:5px;height:42px;background-color:$wieser_green;text-align:right !important;
 
  	}
 
